k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: todo-front
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
        tier: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # ID correspondant à l'utilisateur 'www'
      containers:
      - name: todo-frontend
        image: todo-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080 # MISE A JOUR : 8080
        
        # Les probes doivent aussi viser 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "100Mi"
